--- a/index.html
+++ b/index.html
@@ -35,8 +35,6 @@
     </div>
     <div class="site-mobile-menu-body"></div>
   </div>
-
-
   
   <nav class="site-nav dark js-site-navbar mb-5 site-navbar-target">
     <div class="container">
@@ -116,8 +114,8 @@
         <div class="row mb-5">
             <div class="col-12 text-center" data-aos="fade-up" data-aos-delay="0">
                 <span class="caption">Caratteristiche</span>
-                <h2 class="heading">Vantaggi nell'uso dei nostri prodotti</h2>
-                <p>Vantaggio nell'uso dei nostri prodotti, tema del corso di investimento</p>
+                <h2 class="heading">Esperienze Uniche con i Nostri Prodotti</h2>
+                <p>Scopri i molteplici vantaggi derivanti dall'utilizzo dei nostri prodotti, argomento principale del corso di investimento.</p>
             </div>
         </div> <!-- /.row -->
 
@@ -133,8 +131,8 @@
                         </svg>
                     </div> <!-- /.icon -->
                     <div class="service-contents">
-                        <h3>Realizzato per Sviluppatori</h3>
-                        <p>Vantaggio nell'uso dei nostri prodotti, tema del corso di investimento</p>
+                        <h3>Progettato per Sviluppatori</h3>
+                        <p>Massimizza le tue competenze con l'innovativo design pensato per i professionisti dello sviluppo.</p>
                         <p><a href="#" class="read-more">Per saperne di più</a></p>
                     </div> <!-- /.service-contents-->
                 </div> <!-- /.service -->
@@ -152,8 +150,8 @@
                         </svg>
                     </div> <!-- /.icon -->
                     <div class="service-contents">
-                        <h3>Design Moderno</h3>
-                        <p>Vantaggio nell'uso dei nostri prodotti, tema del corso di investimento</p>
+                        <h3>Stile di Design Innovativo</h3>
+                        <p>Esplora la modernità del nostro design, pensato per offrire un'esperienza all'avanguardia.</p>
                         <p><a href="#" class="read-more">Per saperne di più</a></p>
                     </div> <!-- /.service-contents-->
                 </div> <!-- /.service -->
@@ -171,8 +169,8 @@
                         </svg>
                     </div> <!-- /.icon -->
                     <div class="service-contents">
-                        <h3>Crea Siti Web Sbalorditivi</h3>
-                        <p>Vantaggio nell'uso dei nostri prodotti, tema del corso di investimento</p>
+                        <h3>Siti Web Sbalorditivi con Facilità</h3>
+                        <p>Realizza siti web straordinari con facilità grazie alle funzionalità avanzate dei nostri prodotti.</p>
                         <p><a href="#" class="read-more">Per saperne di più</a></p>
                     </div> <!-- /.service-contents-->
                 </div> <!-- /.service -->
@@ -188,8 +186,8 @@
                         </svg>
                     </div> <!-- /.icon -->
                     <div class="service-contents">
-                        <h3>Dai Vita alle Idee</h3>
-                        <p>Vantaggio nell'uso dei nostri prodotti, tema del corso di investimento</p>
+                        <h3>Trasforma Idee in Realizzazione</h3>
+                        <p>Dona vita alle tue idee grazie alle potenti funzionalità dei nostri prodotti, il cuore del corso di investimento.</p>
                         <p><a href="#" class="read-more">Per saperne di più</a></p>
                     </div> <!-- /.service-contents-->
                 </div> <!-- /.service -->
